--- a/ReefAngel Mobile Client/ReefAngel Mobile Client-Info.plist
+++ b/ReefAngel Mobile Client/ReefAngel Mobile Client-Info.plist
@@ -10,6 +10,11 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>RAicon.png</string>
+		<string>RAicon.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.dave.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
